numberOfPages added
